--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <body class="bg-white font-inter">
     <!-- WhatsApp Floating Button -->
     <div class="fixed bottom-6 right-6 z-50">
-        <a href="https://wa.me/c/557599252324" 
+        <a href="https://wa.me/557599252324" 
            target="_blank" 
            class="bg-green-500 hover:bg-green-600 text-white p-4 rounded-full shadow-2xl transition-all hover:scale-110 animate-pulse-slow">
             <i class="fab fa-whatsapp text-2xl"></i>
@@ -203,7 +203,7 @@
                                 <i class="fas fa-graduation-cap mr-2"></i>
                                 Começar Agora
                             </a>
-                            <a href="https://wa.me/c/557599252324" target="_blank" class="bg-green-500 text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-green-600 transition-all hover:shadow-2xl">
+                            <a href="https://wa.me/557599252324" target="_blank" class="bg-green-500 text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-green-600 transition-all hover:shadow-2xl">
                                 <i class="fab fa-whatsapp mr-2"></i>
                                 WhatsApp
                             </a>
@@ -468,7 +468,7 @@
                     </div>
 
                     <div class="text-center mt-16">
-                        <a href="https://wa.me/c/557599252324" target="_blank" class="btn-gradient text-white px-8 py-4 rounded-full text-lg font-semibold hover:shadow-2xl transition-all">
+                        <a href="https://wa.me/557599252324" target="_blank" class="btn-gradient text-white px-8 py-4 rounded-full text-lg font-semibold hover:shadow-2xl transition-all">
                             <i class="fab fa-whatsapp mr-2"></i>
                             Solicite um Orçamento
                         </a>
@@ -627,7 +627,7 @@
                                             <p class="font-semibold text-dark">WhatsApp Principal</p>
                                             <p class="text-gray-600">(75) 9 9925-2324</p>
                                         </div>
-                                        <a href="https://wa.me/c/557599252324" 
+                                        <a href="https://wa.me/557599252324" 
                                            target="_blank" 
                                            class="bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 transition-colors">
                                             <i class="fab fa-whatsapp mr-1"></i>
@@ -651,7 +651,7 @@
                                        class="bg-gradient-to-r from-pink-500 to-purple-600 text-white p-4 rounded-xl hover:shadow-lg transition-all">
                                         <i class="fab fa-instagram text-xl"></i>
                                     </a>
-                                    <a href="https://wa.me/c/557599252324" 
+                                    <a href="https://wa.me/557599252324" 
                                        target="_blank" 
                                        class="bg-green-500 text-white p-4 rounded-xl hover:bg-green-600 transition-all">
                                         <i class="fab fa-whatsapp text-xl"></i>
@@ -674,7 +674,7 @@
                                 </p>
                                 
                                 <div class="space-y-4">
-                                    <a href="https://wa.me/c/557599252324" 
+                                    <a href="https://wa.me/557599252324" 
                                        target="_blank" 
                                        class="w-full bg-white text-primary py-4 px-6 rounded-xl font-bold hover:bg-gray-100 transition-colors flex items-center justify-center">
                                         <i class="fab fa-whatsapp mr-2 text-green-500"></i>
@@ -891,7 +891,7 @@
                                 <!-- Contato Direto -->
                                 <div class="text-center bg-light p-8 rounded-2xl">
                                     <h4 class="text-xl font-bold mb-4 text-dark">Prefere falar diretamente?</h4>
-                                    <a href="https://wa.me/c/557599252324" 
+                                    <a href="https://wa.me/557599252324" 
                                        target="_blank"
                                        class="bg-green-500 text-white px-8 py-4 rounded-full hover:bg-green-600 transition-colors font-bold shadow-lg hover:shadow-xl">
                                         <i class="fab fa-whatsapp mr-2"></i>
@@ -929,7 +929,7 @@
                         <a href="https://instagram.com/autoescolaguaibim" target="_blank" class="text-gray-300 hover:text-secondary text-2xl transition-colors">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="https://wa.me/c/557599252324" target="_blank" class="text-gray-300 hover:text-secondary text-2xl transition-colors">
+                        <a href="https://wa.me/557599252324" target="_blank" class="text-gray-300 hover:text-secondary text-2xl transition-colors">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
