--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
 
             <div class="border-t border-gray-700 mt-12 pt-8">
                 <div class="text-center text-gray-300">
-                    <p>&copy; 2024 Auto Escola Guaibim. Todos os direitos reservados.</p>
+                    <p>&copy; 2024 Auto Escola Guaibim. Todos os direitos reservados - Desenvolvido por <a href="https://github.com/RCalmunges" target="_blank" class="text-primary-yellow hover:text-yellow-400 transition-colors font-bold">RCalmunges</a></p>.</p>
                     <p class="text-sm mt-2">Valença - Bahia | WhatsApp: (75) 9 9925-2324 | Instagram: @autoescolaguaibim</p>
                 </div>
             </div>
